After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686095 - Yelp crashes on anchors in HTML links
Yelp crashes on anchors in HTML links
Status: RESOLVED FIXED
Product: yelp
Classification: Applications
Component: Crashers
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Yelp maintainers
Yelp maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-13 16:39 UTC by Tails developers
Modified: 2012-11-21 15:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix handling of xref links with anchors (1.04 KB, patch)
2012-10-13 16:39 UTC, Tails developers
committed Details | Review

Description Tails developers 2012-10-13 16:39:54 UTC
Created attachment 226381 [details] [review]
Fix handling of xref links with anchors

When browsing an HTML document with Yelp, double-clicking on a link that contains an anchor (e.g. `#sub2`) will make it crash.

See the attached patch for a fix.

I find strange that it requires a double-click and not a single click to reach the anchor. Should I open another bug for this?
Comment 1 Shaun McCance 2012-11-21 15:36:29 UTC
I can't reproduce the crash or the need to double-click. But the
patch is obviously correct, because we otherwise potentially free
res_arg right after storing a pointer to part of it.

Resolving as fixed since you provided the patch as a fix. Please
reopen or file a new bug if there's still a problem.