Fix handling of xref links with anchors in resolve_file_path()

https://bugzilla.gnome.org/show_bug.cgi?id=686095